Part 1: Initial UI.

--- a/manifests/SyncAndroidManifest_activities.xml.in
+++ b/manifests/SyncAndroidManifest_activities.xml.in
@@ -45,8 +45,8 @@
             android:excludeFromRecents="true"
             android:name="org.mozilla.gecko.sync.setup.activities.SetupSuccessActivity" />
         <activity
-            android:noHistory="false"
             android:excludeFromRecents="true"
+            android:taskAffinity="org.mozilla.gecko.sync.setup"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:name="org.mozilla.gecko.sync.config.activities.ConfigureEnginesActivity" />
         <receiver
