--- a/manifests/SyncAndroidManifest_activities.xml.in
+++ b/manifests/SyncAndroidManifest_activities.xml.in
@@ -44,11 +44,17 @@
             android:noHistory="true"
             android:excludeFromRecents="true"
             android:name="org.mozilla.gecko.sync.setup.activities.SetupSuccessActivity" />
+
         <activity
             android:excludeFromRecents="true"
             android:taskAffinity="org.mozilla.gecko.sync.setup"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:name="org.mozilla.gecko.sync.config.activities.ConfigureEnginesActivity" />
+            android:name="org.mozilla.gecko.sync.config.activities.ConfigureEnginesActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+         </activity>
+
         <receiver
             android:name="org.mozilla.gecko.sync.receivers.UpgradeReceiver">
             <intent-filter>
