--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -60,8 +60,8 @@
 
 <!-- Configure Engines -->
 <!ENTITY sync.configure.engines.title.label 'Configure Engines'>
-<!ENTITY sync.configure.engines.summary.label 'Configure what to sync: Bookmarks, Passwords, History, Tabs, …'>
-<!ENTITY sync.configure.engines.sync.my.title.label 'Sync my …'>
+<!ENTITY sync.configure.engines.summary.label 'Configure what to sync: Bookmarks, Passwords, History, Tabs…'>
+<!ENTITY sync.configure.engines.sync.my.title.label 'Sync my…'>
 
 <!-- Common text -->
 <!ENTITY sync.button.cancel.label 'Cancel'>
