--- a/test/AndroidManifest.xml.in
+++ b/test/AndroidManifest.xml.in
@@ -14,7 +14,7 @@
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="org.mozilla.gecko" />
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <uses-library android:name="android.test.runner" />
     </application>
