Bug 764867: use Fennec's @drawable/icon for all Firefox Sync branding.
We add our own placeholder @drawable/icon (two rotating gray arrows),
but we don't copy 'icon.png' in fennec-copy-code.sh, because Fennec's
icon always correctly brands Firefox Sync.

Also updates labels and icons for developer library and integration
test APKs.

--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -21,6 +21,7 @@
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORD_PROVIDER"/>
 
     <application android:debuggable="true"
+                 android:icon="@drawable/icon"
                  android:label="@string/sync_app_name">
 
 #include manifests/SyncAndroidManifest_activities.xml.in
