Bug 768549: ProviderActivity to control IdP provisioning and authentication in a WebView. Required SDK 11 API (shouldInterceptRequest) and will be hard work to make it work below. PersonaUserAgent stubbed out to bundle all crypto and storage required for the process.

--- a/manifests/PersonaAndroidManifest_activities.xml.in
+++ b/manifests/PersonaAndroidManifest_activities.xml.in
@@ -3,3 +3,14 @@
             android:name="org.mozilla.persona.PersonaAuthenticatorActivity"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
             android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:clearTaskOnLaunch="true"
+            android:name="org.mozilla.persona.client.ProviderActivity"
+            android:label="Persona IdP"
+            android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+            
