Bug 767179 - Make user interface appear in fixed size dialogs on tablets.
Specifically:

* modify tablet specific styles in res/values-large-v11/sync_styles.xml.

* derive SyncTheme from Theme (phone) or Theme.Dialog (tablet) as
  appropriate.

* uniformize spacing to use SyncSpace dimension (20dp).

* rather than using an external RelativeLayout and pinning the top and
  bottom bar to the parent top and bottom, use an external
  LinearLayout (style SyncContainer) with a middle ScrollView with
  weight 1 that absorbs all available space.  This keeps the previous
  layout on phones but smoothly wraps content on tablets.

* ensure that we resize all layouts when the keyboard is shown.

* set the external LinearLayout (style SyncContainer) layout width,
  minWidth and maxWidth (to 600dip) on tablet only.  We would like to
  set layout width and height to 600x600 dp or similar, but this
  doesn't work when the keyboard is shown.  The current solution looks
  good but can have very tall dialog boxes.  Nothing to be done,
  unfortunately.

--- a/manifests/SyncAndroidManifest_activities.xml.in
+++ b/manifests/SyncAndroidManifest_activities.xml.in
@@ -23,13 +23,13 @@
             android:theme="@style/SyncTheme"
             android:clearTaskOnLaunch="true"
             android:name="org.mozilla.gecko.sync.setup.activities.AccountActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
 
         <activity
             android:theme="@style/SyncTheme"
             android:clearTaskOnLaunch="true"
             android:name="org.mozilla.gecko.sync.setup.activities.RedirectToSetupActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
 
         <activity
             android:theme="@style/SyncTheme"
