Bug 753878 - Add ConfigureEnginesActivity providing user interface for enabling/disabling engines.

--- a/manifests/SyncAndroidManifest_activities.xml.in
+++ b/manifests/SyncAndroidManifest_activities.xml.in
@@ -36,12 +36,24 @@
         <activity
             android:theme="@style/SyncTheme"
             android:noHistory="true"
+            android:excludeFromRecents="true"
             android:name="org.mozilla.gecko.sync.setup.activities.SetupFailureActivity" />
 
         <activity
             android:theme="@style/SyncTheme"
             android:noHistory="true"
+            android:excludeFromRecents="true"
             android:name="org.mozilla.gecko.sync.setup.activities.SetupSuccessActivity" />
+
+        <activity
+            android:excludeFromRecents="true"
+            android:taskAffinity="org.mozilla.gecko.sync.setup"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:name="org.mozilla.gecko.sync.config.activities.ConfigureEnginesActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+         </activity>
 
         <receiver
             android:name="org.mozilla.gecko.sync.receivers.UpgradeReceiver">
