--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -58,6 +58,11 @@
 <!ENTITY sync.settings.options.label 'Options'>
 <!ENTITY sync.summary.pair.label 'Link another device to your &syncBrand.shortName.label; account'>
 
+<!-- Configure Engines -->
+<!ENTITY sync.configure.engines.title.label 'Configure Engines'>
+<!ENTITY sync.configure.engines.summary.label 'Configure what to sync: Bookmarks, Passwords, History, Tabs…'>
+<!ENTITY sync.configure.engines.sync.my.title.label 'Sync my…'>
+
 <!-- Common text -->
 <!ENTITY sync.button.cancel.label 'Cancel'>
 <!ENTITY sync.button.connect.label 'Connect'>
@@ -78,6 +83,7 @@
 
 <!-- Notification strings -->
 <!ENTITY sync.notification.oneaccount.label 'Only one &syncBrand.fullName.label; account is supported.'>
+<!ENTITY sync.notification.configure.saved 'Your preferences have been saved.'>
 
 <!-- Incorrect settings and changing credentials. -->
 <!ENTITY sync.invalidcreds.label 'Incorrect account name or password.'>
