Address minor/documentation comments.

--- a/manifests/SyncAndroidManifest_activities.xml.in
+++ b/manifests/SyncAndroidManifest_activities.xml.in
@@ -33,6 +33,9 @@
             android:name="org.mozilla.gecko.sync.setup.activities.RedirectToSetupActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"/>
 
+        <!-- Secondary Sync activities. These depend on other activities for context
+             (display a result, or a next step). Since these don't make sense as stand-alone
+             activities, set excludeFromRecents="true" -->
         <activity
             android:theme="@style/SyncTheme"
             android:noHistory="true"
@@ -64,6 +67,7 @@
 
         <activity
             android:theme="@style/SyncTheme"
+            android:excludeFromRecents="true"
             android:icon="@drawable/icon"
             android:label="@string/sync_app_name"
             android:configChanges="orientation"
