Bug 792254 - Part 1: Avoid Maven platform encoding warning.
See http://thomassundberg.wordpress.com/2011/02/22/build-is-platform-dependent/ for details.

--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -16,6 +16,7 @@
   <properties>
     <project.basedir>../</project.basedir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <mozilla.externalPackages>ch.boye.*:org.json.*:org.mozilla.apache.*</mozilla.externalPackages>
   </properties>
   <dependencies>
