--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -141,13 +141,46 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.11</version>
+        <version>2.12</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit47</artifactId>
+            <version>2.12</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <runOrder>random</runOrder>
-          <!-- <runOrder>alphabetical</runOrder> -->
-          <!-- <runOrder>reversealphabetical</runOrder> -->
+          <excludedGroups>org.mozilla.android.sync.test.integration.IntegrationTestCategory</excludedGroups>
         </configuration>
       </plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.12</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.12</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+          <groups>org.mozilla.android.sync.test.integration.IntegrationTestCategory</groups>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+            <configuration>
+              <runOrder>random</runOrder>
+              <includes>
+								<include>**/*.class</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
