--- a/test/AndroidManifest.xml.in
+++ b/test/AndroidManifest.xml.in
@@ -2,20 +2,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.mozilla.gecko.sync.test"
-    sharedUserId="notSharedUserId"
+    sharedUserId="@MOZ_ANDROID_SHARED_ID@"
     android:versionCode="1"
     android:versionName="1.0" >
+
     <uses-sdk android:minSdkVersion="8"
               android:targetSdkVersion="14" />
+
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.FORMHISTORY_PROVIDER"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORD_PROVIDER"/>
-    <instrumentation
-        android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="org.mozilla.gecko" />
+
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <uses-library android:name="android.test.runner" />
     </application>
+
+
+    <instrumentation
+        android:label="Sync tests"
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="org.mozilla.gecko" />
 </manifest>
