Bug 768549: Add BrowserID assets to maven.

--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -135,6 +135,7 @@
           </dex>
           <androidManifestFile>${project.basedir}/../AndroidManifest.xml</androidManifestFile>
           <resourceDirectory>${project.basedir}/../res</resourceDirectory>
+          <assetsDirectory>${project.basedir}/../assets</assetsDirectory>
         </configuration>
         <extensions>true</extensions>
       </plugin>
