--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 AndroidManifest.xml
 R.java
 src/main/java/org/mozilla/gecko/sync/GlobalConstants.java
+src/main/java/org/mozilla/gecko/sync/SyncConstants.java
 src/main/java/org/mozilla/gecko/db/BrowserContract.java
 res/xml/sync_authenticator.xml
 res/xml/sync_syncadapter.xml
