Front end work in progress.

--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -12,6 +12,7 @@
               android:targetSdkVersion="14" />
 
 #include manifests/SyncAndroidManifest_permissions.xml.in
+#include manifests/FxAccountAndroidManifest_permissions.xml.in
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
@@ -23,7 +24,9 @@
                  android:label="@string/sync_app_name">
 
 #include manifests/SyncAndroidManifest_activities.xml.in
+#include manifests/FxAccountAndroidManifest_activities.xml.in
 #include manifests/SyncAndroidManifest_services.xml.in
+#include manifests/FxAccountAndroidManifest_services.xml.in
 
     </application>
 
