Bug 810988 - Part 1: announcements handler changes for broadcast split.

--- a/manifests/AnnouncementsAndroidManifest_activities.xml.in
+++ b/manifests/AnnouncementsAndroidManifest_activities.xml.in
@@ -12,7 +12,7 @@
                 <action android:name="android.intent.action.ACTION_EXTERNAL_APPLICATIONS_AVAILABLE" />
             </intent-filter>
             <intent-filter >
-              <action android:name="org.mozilla.gecko.ANNOUNCEMENTS_PREF" />
+              <action android:name="@ANDROID_PACKAGE_NAME@.ANNOUNCEMENTS_PREF" />
             </intent-filter>
         </receiver>
 
