Bug 811508 - Add Vagrantfile that configures basic command line development environment.
Try `vagrant up` and `vagrant ssh` to build and log in to virtual machine.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ local.properties
 bin
 gen
 .settings
+.vagrant
+puppet/modules/data/files/*.tgz
+puppet/modules/data/files/*.zip
+puppet/modules/data/files/*.tar.gz
