--- a/eclipse/android-sync-app.project
+++ b/eclipse/android-sync-app.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>android-sync</name>
+	<name>android-sync-app</name>
 	<buildSpec>
 		<buildCommand>
 			<name>com.android.ide.eclipse.adt.ResourceManagerBuilder</name>
