Bug 809210 - Add first version of UI.

--- a/src/main/java/org/mozilla/gecko/fxaccount/FxAccountConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/fxaccount/FxAccountConstants.java.in
@@ -6,4 +6,8 @@ package org.mozilla.gecko.fxaccount;
 
 public class FxAccountConstants {
   public static final String ACCOUNT_TYPE_FXACCOUNT = "org.mozilla.fxaccount";
+
+  public static final String PARAM_ACCOUNT = "account";
+  public static final String PARAM_EMAIL = "email";
+  public static final String PARAM_PASSWORD = "password";
 }
