--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -30,9 +30,10 @@
                  android:label="@string/sync_app_name">
 
 #include manifests/SyncAndroidManifest_activities.xml.in
+#include manifests/FxAccountAndroidManifest_activities.xml.in
 #include manifests/SyncAndroidManifest_services.xml.in
-
 #include manifests/FxAccountAndroidManifest_services.xml.in
+
     </application>
 
     <instrumentation
