--- a/manifests/FxAccountAndroidManifest_services.xml.in
+++ b/manifests/FxAccountAndroidManifest_services.xml.in
@@ -9,3 +9,7 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/fxaccount_authenticator" />
         </service>
+        <service
+		        android:exported="false"
+		        android:name="org.mozilla.gecko.fxaccount.FxAccountIntentService" >
+        </service>
