Bug 815838 - Add SendCommandActivity and subclasses ResetAllStagesActivity and WipeAllStagesActivity.

--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -32,6 +32,14 @@
             android:theme="@android:style/Theme.NoDisplay"
             android:name="org.mozilla.gecko.sync.setup.activities.SyncNowActivity" />
 
+        <activity
+            android:theme="@android:style/Theme.NoDisplay"
+            android:name="org.mozilla.gecko.sync.setup.activities.ResetAllStagesActivity" />
+
+        <activity
+            android:theme="@android:style/Theme.NoDisplay"
+            android:name="org.mozilla.gecko.sync.setup.activities.WipeAllStagesActivity" />
+
 #include manifests/SyncAndroidManifest_activities.xml.in
 #include manifests/SyncAndroidManifest_services.xml.in
 
