--- a/src/main/java/org/mozilla/gecko/background/announcements/AnnouncementsConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/background/announcements/AnnouncementsConstants.java.in
@@ -18,6 +18,7 @@ public class AnnouncementsConstants {
 
   static final String PREFS_BRANCH = "background";
   static final String PREF_LAST_FETCH  = "last_fetch";
+  static final String PREF_LAST_DATE = "last_announce_date";
   static final String PREF_LAST_LAUNCH = "last_firefox_launch";
   static final String PREF_ANNOUNCE_SERVER_BASE_URL  = "announce_server_base_url";
   static final String PREF_EARLIEST_NEXT_ANNOUNCE_FETCH = "earliest_next_announce_fetch";
