--- a/src/main/java/org/mozilla/gecko/sync/GlobalConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/sync/GlobalConstants.java.in
@@ -6,7 +6,8 @@
 package org.mozilla.gecko.sync;
 
 /**
- * Preprocessed class for storing preprocessed values.
+ * Preprocessed class for storing preprocessed values common to all
+ * Android services.
  */
 public class GlobalConstants {
   public static final String ANDROID_CPU_ARCH = "@ANDROID_CPU_ARCH@";
@@ -23,14 +24,8 @@ public class GlobalConstants {
 
   public static final long BUILD_TIMESTAMP = @MOZ_BUILD_TIMESTAMP@;
 
+  public static final String MOZ_APP_DISPLAYNAME = "@MOZ_APP_DISPLAYNAME@";
   public static final String MOZ_APP_VERSION = "@MOZ_APP_VERSION@";
   public static final String BROWSER_INTENT_PACKAGE = "@ANDROID_PACKAGE_NAME@";
   public static final String BROWSER_INTENT_CLASS = BROWSER_INTENT_PACKAGE + ".App";
-
-  /**
-   * Bug 790931: this signing-level permission protects broadcast intents that
-   * should be received only by Firefox versions sharing the same Android
-   * Account type.
-   */
-  public static final String PER_ACCOUNT_TYPE_PERMISSION = "@MOZ_ANDROID_SHARED_ACCOUNT_TYPE@.permission.PER_ACCOUNT_TYPE";
 }
