--- a/src/main/java/org/mozilla/gecko/sync/GlobalConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/sync/GlobalConstants.java.in
@@ -28,4 +28,13 @@ public class GlobalConstants {
   public static final String MOZ_APP_VERSION = "@MOZ_APP_VERSION@";
   public static final String BROWSER_INTENT_PACKAGE = "@ANDROID_PACKAGE_NAME@";
   public static final String BROWSER_INTENT_CLASS = BROWSER_INTENT_PACKAGE + ".App";
+
+  public static final int SHARED_PREFERENCES_MODE = 0;
+  // These are used to ask Fennec (via reflection) to send
+  // us a pref notification. This avoids us having to guess
+  // Fennec's prefs branch and pref name.
+  // Eventually Fennec might listen to startup notifications and
+  // do this automatically, but this will do for now. See Bug 800244.
+  public static String GECKO_PREFERENCES_CLASS = "org.mozilla.gecko.GeckoPreferences";
+  public static String GECKO_BROADCAST_METHOD  = "broadcastAnnouncementsPref";
 }
