Bug 844347: move org.mozilla.gecko.sync.GlobalConstants to org.mozilla.gecko.background.common.GlobalConstants.

--- a/src/main/java/org/mozilla/gecko/sync/SyncConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/sync/SyncConstants.java.in
@@ -5,6 +5,8 @@
 
 package org.mozilla.gecko.sync;
 
+import org.mozilla.gecko.background.common.GlobalConstants;
+
 /**
  * Preprocessed class for storing preprocessed values specific to Android Sync.
  */
