Bug 840128 - Part 2: Bagheera client and test server.

--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -19,6 +19,14 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <mozilla.externalPackages>ch.boye.*:org.json.*:org.mozilla.apache.*</mozilla.externalPackages>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>mozilla-metrics-releases</id>
+      <url>http://mozilla-metrics.github.com/maven2/releases</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -27,6 +35,14 @@
       <type>jar</type>
       <scope>test</scope>
       <optional>true</optional>
+    </dependency>
+
+    <!-- For testing Bagheera client. -->
+    <dependency>
+      <groupId>com.mozilla</groupId>
+      <artifactId>bagheera</artifactId>
+      <version>0.8-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- Make httpclientandroidlib work. -->
