Bug 840128 - Part 2: Bagheera client and test server.

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
       </activation>
       <modules>
         <module>android-sync-app</module>
+        <module>bagheera-client-test</module>
         <module>android-sync-instrumentation</module>
       </modules>
     </profile>
