--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -19,6 +19,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <mozilla.externalPackages>ch.boye.*:org.json.*:org.mozilla.apache.*</mozilla.externalPackages>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -296,6 +297,20 @@
             </plugin>
           </reportPlugins>
         </configuration>
+      </plugin>
+
+      <!-- Build a test-jar so we can reuse test code. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
