Use Bagheera 0.8, not 0.8-SNAPSHOT.

--- a/bagheera-client-test/pom.xml
+++ b/bagheera-client-test/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>com.mozilla</groupId>
       <artifactId>bagheera</artifactId>
-      <version>0.8-SNAPSHOT</version>
+      <version>0.8</version>
       <scope>test</scope>
     </dependency>
 
