--- a/bagheera-client-test/example.classpath
+++ b/bagheera-client-test/example.classpath
@@ -7,10 +7,12 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+
+	<classpathentry kind="var" path="M2_REPO/com/mozilla/bagheera/0.8/bagheera-0.8.jar"/>
+  <!-- Gosh, it'd be nice if we just relied on M2Eclipse and had it resolve these deps. -->
 	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.0.6/jackson-core-2.0.6.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/github/sgroschupf/zkclient/0.1/zkclient-0.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/google/protobuf/protobuf-java/2.4.1/protobuf-java-2.4.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/mozilla/bagheera/0.8-SNAPSHOT/bagheera-0.8-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/yammer/metrics/metrics-core/2.1.2/metrics-core-2.1.2.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/yammer/metrics/metrics-ganglia/2.1.2/metrics-ganglia-2.1.2.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/yammer/metrics/metrics-graphite/2.1.2/metrics-graphite-2.1.2.jar"/>
