--- a/manifests/AnnouncementsAndroidManifest_activities.xml.in
+++ b/manifests/AnnouncementsAndroidManifest_activities.xml.in
@@ -1,15 +1,11 @@
         <!--
-             As well as these system actions, we also listen for pref notifications
+             As well as system actions, we also listen for pref notifications
              sent by Fennec: @ANDROID_PACKAGE_NAME@.ANNOUNCEMENTS_PREF.
           -->
         <receiver android:name="org.mozilla.gecko.background.announcements.AnnouncementsBroadcastReceiver" >
             <intent-filter>
-                <!-- Startup. -->
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-            <intent-filter>
-                <!-- SD card remounted. -->
-                <action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE" />
+                <!-- Network available. -->
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
             <intent-filter >
               <action android:name="@ANDROID_PACKAGE_NAME@.ANNOUNCEMENTS_PREF" />
