Bug 840128 - Review comment: replace hard-coded path with M2_REPO.

--- a/bagheera-client-test/example.classpath
+++ b/bagheera-client-test/example.classpath
@@ -3,7 +3,8 @@
 	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="var" path="M2_REPO/android/util/base64-unstub/1/base64-unstub-1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/android/util/log-unstub/1/log-unstub-1.jar"/>
-	<classpathentry kind="lib" path="/Users/rnewman/moz/git/android-sync/external/sharedpreferences-stub-1/lib/sharedpreferences-stub.jar"/>
+
+	<classpathentry kind="var" path="M2_REPO/android/content/sharedpreferences-stub/1/sharedpreferences-stub-1.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
