--- a/strings/picl_strings.dtd.in
+++ b/strings/picl_strings.dtd.in
@@ -9,3 +9,4 @@
 
 <!-- Account strings -->
 <!ENTITY picl.account.label '&piclBrand.fullName.label;'>
+<!ENTITY picl.account.type "org.mozilla.gecko.picl.account">
