--- a/picl_authenticator.xml.template
+++ b/picl_authenticator.xml.template
@@ -5,8 +5,8 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="org.mozilla.picl"
+    android:accountType="@string/picl_account_type"
     android:icon="@drawable/icon"
     android:smallIcon="@drawable/icon"
     android:label="@string/picl_account_label"
-/>
+    android:accountPreferences="@xml/picl_options" />
