--- a/picl_syncadapter.xml.template
+++ b/picl_syncadapter.xml.template
@@ -6,7 +6,7 @@
 
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="@ANDROID_PACKAGE_NAME@.db.browser"
-    android:accountType="org.mozilla.picl"
+    android:accountType="@string/picl_account_type"
     android:supportsUploading="true"
     android:userVisible="true"
 />
