--- a/strings/picl_strings.xml.in
+++ b/strings/picl_strings.xml.in
@@ -4,3 +4,4 @@
 
   <!-- Account strings -->
   <string name="picl_account_label">&picl.account.label;</string>
+  <string name="picl_account_type">&picl.account.type;</string>
