Bug XXX - Merge seanmonstar's PICL Sync demo.
This:
* fleshes out a potential PICL global session hierarchy;
* starts work on HTTP PICLTabsClient;
* syncs against Fennec's tabs content provider;
* syncs against live servers.

The tabs content provider part needs a tiny Fennec patch to look
better in the Android Accounts menu, but this will actually sync on
the emulator and on newer Android devices.

--- a/picl_syncadapter.xml.template
+++ b/picl_syncadapter.xml.template
@@ -5,7 +5,7 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="@ANDROID_PACKAGE_NAME@.db.browser"
+    android:contentAuthority="@ANDROID_PACKAGE_NAME@.db.tabs"
     android:accountType="@string/picl_account_type"
     android:supportsUploading="true"
     android:userVisible="true"
