--- a/src/main/java/org/mozilla/gecko/picl/PICLAccountConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/picl/PICLAccountConstants.java.in
@@ -5,5 +5,6 @@
 package org.mozilla.gecko.picl;
 
 public class PICLAccountConstants {
-  public static final String ACCOUNT_TYPE = "org.mozilla.picl";
+  public static final String KEY_SERVER = "http://192.168.1.100:8090";
+  public static final String STORAGE_SERVER = "http://192.168.1.100:8080";
 }
