--- a/bagheera-client-test/example.classpath
+++ b/bagheera-client-test/example.classpath
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry including="**/*.java" kind="src" output="bin/test-classes" path="src/test/java"/>
+	<classpathentry kind="src" path="gen"/>
+
+	<classpathentry combineaccessrules="false" kind="src" path="/android-sync"/>
+	<classpathentry kind="output" path="bin/classes"/>
+
+  <!-- Stub/unstub libraries must come before Android libraries for
+       unit tests to function. -->
 	<classpathentry kind="var" path="M2_REPO/android/util/base64-unstub/1/base64-unstub-1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/android/util/log-unstub/1/log-unstub-1.jar"/>
-
 	<classpathentry kind="var" path="M2_REPO/android/content/sharedpreferences-stub/1/sharedpreferences-stub-1.jar"/>
+
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 
-	<classpathentry kind="var" path="M2_REPO/com/mozilla/bagheera/0.8/bagheera-0.8.jar"/>
   <!-- Gosh, it'd be nice if we just relied on M2Eclipse and had it resolve these deps. -->
+	<classpathentry kind="var" path="M2_REPO/com/mozilla/bagheera/0.8/bagheera-0.8.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.0.6/jackson-core-2.0.6.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/github/sgroschupf/zkclient/0.1/zkclient-0.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/google/protobuf/protobuf-java/2.4.1/protobuf-java-2.4.1.jar"/>
@@ -30,7 +37,4 @@
 	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.1/slf4j-api-1.7.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.7.1/slf4j-log4j12-1.7.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/xerial/snappy/snappy-java/1.0.4.1/snappy-java-1.0.4.1.jar"/>
-	<classpathentry kind="src" path="/android-sync"/>
-	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
